add token and email verification

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,55 +6,20 @@
 #Every whitespace in translation is replaced by "."
 
 Title=Title
-Price=Price
 Language=Language
-Author=Author
-Visibility.Status=Visibility Status
-Code=Code
-Sale.Status=Sale Status
-Description=Description
 Delete=Delete
 Save.changes=Save changes
 Back=Back
 Cancel.changes=Cancel changes
-Course.details=Course details
-Current.photo=Current photo
-No.photo=No photo
-Modules=Modules
 Create=Create
 Navigation=Navigation
 Name=Name
 Edit=Edit
-Lessons=Lessons
-Module=Module
-Course.attachments=Course attachments
-ID=ID
-Download=Download
 Yes=Yes
 No=No
 Cancel=Cancel
 Create.new.module=Create new module
-Create.new.lesson=Create new lesson
-Movie.Link=Movie Link
-Create.new.course.attachment=Create new course attachment
-File=File
-Change.photo=Change photo
-Module.details=Module details
-Lesson.details=Lesson details
-Type=Type
-Lesson.Attachments=Lesson Attachments
-Create.new.lesson.attachment=Create new lesson attachment
-Movie.Link.Type=Movie Link Type
-Task.solution.movie.link.type=Task solution movie link type
 
-#PERSONALIZED=======================================================================
-
-personalized.delete.lesson.modal=Are you sure, you want delete this lesson?
-personalized.delete.course.attachment.modal=Are you sure, you want delete this attachment?
-personalized.delete.module.modal=Do you want to remove module with assigned lessons?
-personalized.delete.lesson.attachment.modal=Are you sure, you want delete this attachment?
-personalized.task.solution.movie.link=Task Solution Movie Link (Only for type 'Task')
-personalized.task.solution.description=Task Solution Description (Only for type 'Task')
 
 #===================================================================================
 #DEPRECATED BELOW - DO NOT USE
@@ -74,63 +39,8 @@ delete.object.modal.cancel=Cancel
 #Pagination
 pagination.records=Records per site:
 
-#Lesson comments
-lesson.comments.header=Lesson Comments
-lesson.comments.lesson=Lesson
-lesson.comments.course=Course
-lesson.comments.customer=Customer
-lesson.comments.text=Text
-lesson.comments.create.datetime=Create Datetime
-lesson.comments.status=Status
-lesson.comments.delete=Delete
-
-#Course comments
-course.comments.header=Course Comments
-course.comments.course=Course
-course.comments.customer=Customer
-course.comments.text=Text
-course.comments.create.datetime=Create Datetime
-course.comments.status=Status
-course.comments.delete=Delete
-
-#Courses
-courses.header=Courses
-courses.title=Title
-courses.price=Price
-courses.lang=Language
-courses.author=Author
-courses.visibility.status=Visibility Status
-courses.details=Details
-courses.delete=Delete
-courses.create.new=Create new course
-courses.code=Code
-courses.description=Description
-courses.create=Create
-courses.cancel=Cancel
 
 
-#Job-Offers
-job.offers.create=Create
-job.offers.cancel=Cancel
-job.offers.header=Job Offers
-job.offers.create.new=Create new job offer
-job.offers.id=ID
-job.offers.title=Title
-job.offers.content=Content
-job.offers.create.datetime=Creation time
-job.offers.delete=Delete
-
-#Contacts-people
-contacts.people.create=Create
-contacts.people.create.new=Create new contact
-contacts.people.cancel=Cancel
-contacts.people.header=People
-contacts.people.id=ID
-contacts.people.first.name=First Name
-contacts.people.last.name=Last Name
-contacts.people.email=Email
-contacts.people.phone=Phone
-contacts.people.delete=Delete
 
 
 #MAILS
@@ -141,20 +51,14 @@ mail.after.registration.footer=Log in to your new account here:
 mail.after.registration.click=Computing College
 mail.after.registration.confirm.email=Please confirm your email address by clicking here (link will be valid for 24 hours):
 mail.after.registration.confirm.email.link=Confirm Email
+mail.verification.header = Email verification
+mail.verification.context = Click the button below if you want to verify your email.
+mail.verification.send = Send
 
 mail.after.password.change.content=Password changed successfully!
 mail.after.password.change.description=You can now log into you account with the new password.
 mail.after.password.change.footer=We are waiting for you:
 
-mail.after.order.header=Order confirmation
-mail.after.order.content=We have accepted your order!
-mail.after.order.footer=Come back to us:
-mail.after.order.order.info=Info about order:
-mail.after.order.order.number=Order number:
-mail.after.order.order.total.price=Order total price:
-mail.after.order.bought.courses=Bought products:
-mail.after.order.course.name=Name
-mail.after.order.course.price=Price
 
 mail.password.reset.header=Password change request
 mail.password.reset.content=Click here if you want restart your password:
@@ -205,18 +109,6 @@ navbar.my.advises=My Advises
 navbar.my.advise.categories=My Categories
 navbar.my.advise.answers=My Answers
 
-#home
-home.search.course=Search course...
-home.search.buy.my.code=Search code...
-home.search.selections=Search selection...
-home.search=Search
-home.courses.description=Here you can buy online courses
-home.codes.description=Here you can buy source codes of application with installation description
-home.selections.descriptions=Here you can buy selected materials from internet (movies/links/articles)
-home.tab.title=Courses
-home.content.description=On this site you can buy or redeem for free online computer science courses
-home.content.keywords=courses, online, programming, information technology, computing, video, free, paid
-home.sale.closed=SALE CLOSED
 
 
 #home page
@@ -250,37 +142,6 @@ footer.contact=Contact
 footer.rodo=RODO
 rodo.tab.title=RODO
 
-#course details
-course.details.description=Description:
-course.details.author=Author:
-course.details.price=Price:
-course.details.language=Language:
-course.details.add.course.to.basket=Add to basket
-course.students.comments=Students comments:
-course.content.description=Video course about computer science. It will help you develop - get your first job, a promotion or start your own business
-course.content.keywords=course, video, information technology, programming, IT
-
-#basket
-basket.header=Basket
-basket.total.price=Total price
-basket.buy=Buy and pay
-basket.buy.free=Pick up for free!
-basket.data.to.invoice=Data to invoice
-basket.private.person=Private person
-basket.company=Company
-basket.first.and.last.name=First and last name
-basket.company.name=Company name
-basket.street=Street and number
-basket.postal.code=Postal code
-basket.city=City
-basket.nip=Tax number
-basket.login.or.register=Login or register to finalize order
-basket.login=Login
-basket.register=Register
-basket.country=Country
-basket.tab.title=Basket
-basket.content.description=The products added to the cart are stored here. You can also complete your order from here
-basket.content.keywords=basket, cart, shopping basket, shopping cart, products, purchase
 
 
 #login
@@ -316,16 +177,6 @@ register.tab.title=Register
 register.content.description=You can register to the portal here
 register.content.keywords=register, portal
 
-#successfully added to basket modal
-successfully.added.to.basket.title=Course added to basket successfully!
-successfully.added.to.basket.body=You can go to basket and finalize your transaction or continue shopping.
-successfully.added.to.basket.go.to.basket=Go to basket
-successfully.added.to.basket.continue.shopping=Continue shopping
-
-#my courses
-my.courses.header=My Courses
-my.courses.header.codes=My Codes
-my.courses.header.selections=My Selections
 
 #my account
 my.account.header=Account settings
@@ -342,39 +193,9 @@ my.account.email.not.confirmed=Your email is not confirmed! Verify it now!
 my.account.send.confirmation.mail=Send me a confirmation email
 my.account.confirmation.mail.sent=We have sent a message to your inbox with a confirmation link
 
-#payments
-payments.header=Payments
-payments.id=ID
-payments.number=Number
-payments.purchase.date=Purchase Date
-payments.total.price=Total Price
-payments.status=Status
-payments.details=Details
-payments.courses=Courses:
-payments.title=Title
-payments.price=Price
-payments.cancel=Cancel
-payments.ordered.courses=Ordered courses
-payments.invoices=Invoices
-payments.no.invoices=No invoices. The invoice for the order should be issued up to 48 hours after paying for the order. If it doesn't, contact support.
-payments.type=Type
-payments.download=Download
-payments.finish.payment=Finish payment
-payments.finish.payment.content=Your payment is not completed. You can pay for your order here:
-payments.pay=Pay
-payments.info=You can view and download invoices by clicking the details button
 
 #operation successful modal
 operation.successful.modal.body=Operation completed successfully
-
-#thanks for shopping
-thanks.for.shopping.header=Thanks for shopping!
-thanks.for.shopping.content=We are sure you will find the courses valuable.
-thanks.for.shopping.call.to.action=Go to your new courses. They are waiting for you!
-thanks.for.shopping.something.went.wrong=Something went wrong with order :(
-thanks.for.shopping.contact.support=If you don't know what caused the error, please contact support. We will be happy to help you.
-thanks.for.shopping.to.home.page=Go to home page
-thanks.for.shopping.tab.title=Thanks for shopping
 
 #regulation
 regulation.header=Regulation
@@ -396,7 +217,6 @@ data.changed.success.go.home=Go to home page
 #registered successfully
 registered.success.header=Registered successfully!
 registered.success.content=Head to your mailbox to confirm your email and then log in to your new account!
-registered.student.success.content=You can log into your account
 registered.success.log.in=Log in!
 registered.success.go.home=Go to home page
 
