add forgotten password with use token

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,7 +53,7 @@ mail.after.registration.confirm.email=Please confirm your email address by click
 mail.after.registration.confirm.email.link=Confirm Email
 mail.verification.header = Email verification
 mail.verification.context = Click the button below if you want to verify your email.
-mail.verification.send = Send
+mail.verification.send = Verify
 
 mail.after.password.change.content=Password changed successfully!
 mail.after.password.change.description=You can now log into you account with the new password.
