delete ID in front equipment and add search by equipment name

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -277,7 +277,7 @@ equipment.admin.name = Name:
 equipment.front = Equipment
 equipment.front.create = Create
 equipment.front.find = Find
-
+equipment.front.name = Name
 #Attribute
 attribute.admin.attributes = Attributes:
 attribute.admin.header = Attribute:
