add front notification for user with delete opportunity

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -251,11 +251,6 @@ cookie.modal.content=This website uses cookies to personalize content and analys
 cookie.modal.accept=I accept
 
 
-
-
-
-
-
 email.confirmed.header=Email confirmed successfully!
 email.confirmed.content=Log in to your fully configured account!
 
@@ -300,3 +295,6 @@ user.admin.create.header=Create new User
 users.admin.login=Login
 users.admin.registration.date=Registration date
 users.admin.details=Details
+
+#Notification
+notification.front.header=Notifications:
