add uploading image for admin

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -288,6 +288,10 @@ attribute.admin.name = Name:
 attribute.admin.type = Type:
 attribute.admin.domain = Domain:
 
+#Picture front
+
+picture.front.header = Picture:
+
 #User admin
 users.admin.header=Users
 user.admin.details=User details
